Update symbol for bold greek letters

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -21,6 +21,7 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{bm}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
