Add MDP + DRL sections

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -343,7 +343,8 @@
   author   = {Scott M. Lundberg and Gabriel G. Erion and Su-In Lee},
   title    = {Consistent Individualized Feature Attribution for Tree Ensembles},
   url      = {https://arxiv.org/abs/1802.03888v3},
-  year     = {2019}
+  year     = {2019},
+  journal  = {Advances in Neural Information Processing Systems}
 }
 @article{Ma2021,
   abstract  = {In recent years, deep reinforcement learning (DRL) algorithm has been widely used in algorithmic trading. Many fully automated trading systems or strategies have been built using DRL agents, which integrate price prediction and trading signal generation in one system. However, the previous agents extract the current state from the market data without considering the long-term market historical trend when making decisions. Besides, plenty of related and useful information has not been considered. To address these two problems, we propose a novel model named Parallel Multi-Module Deep Reinforcement Learning (PMMRL) algorithm. Here, two parallel modules are used to extract and encode the feature: one module employing Fully Connected (FC) layers is used to learn the current state from the market data of the traded stock and the fundamental data of the issuing company; another module using Long Short-Term Memory (LSTM) layers aims to detect the long-term historical trend of the market. The proposed model can extract features from the whole environment by the above two modules simultaneously, taking the advantages of both LSTM and FC layers. Extensive experiments on China stock market illustrate that the proposed PMMRL algorithm achieves a higher profit and a lower drawdown than several state-of-the-art algorithms.},
@@ -466,6 +467,16 @@
   url      = {https://doi.org/10.6028/NIST.IR.8312},
   year     = {2021}
 }
+@article{Raffin2021,
+  author  = {Antonin Raffin and Ashley Hill and Adam Gleave and Anssi Kanervisto and Maximilian Ernestus and Noah Dormann},
+  issue   = {268},
+  journal = {Journal of Machine Learning Research},
+  pages   = {1-8},
+  title   = {Stable-Baselines3: Reliable Reinforcement Learning Implementations},
+  volume  = {22},
+  url     = {http://jmlr.org/papers/v22/20-1364.html},
+  year    = {2021}
+}
 @article{Ribeiro2016,
   abstract  = {Despite widespread adoption, machine learning models remain mostly black boxes. Understanding the reasons behind predictions is, however, quite important in assessing trust, which is fundamental if one plans to take action based on a prediction, or when choosing whether to deploy a new model. Such understanding also provides insights into the model, which can be used to transform an untrustworthy model or prediction into a trustworthy one. In this work, we propose LIME, a novel explanation technique that explains the predictions of any classifier in an interpretable and faithful manner, by learning an interpretable model locally around the prediction. We also propose a method to explain models by presenting representative individual predictions and their explanations in a non-redundant way, framing the task as a submodular optimization problem. We demonstrate the flexibility of these methods by explaining different models for text (e.g. random forests) and image classification (e.g. neural networks). We show the utility of explanations via novel experiments, both simulated and with human subjects, on various scenarios that require trust: deciding if one should trust a prediction, choosing between models, improving an untrustworthy classifier, and identifying why a classifier should not be trusted.},
   author    = {Marco Tulio Ribeiro and Sameer Singh and Carlos Guestrin},
@@ -543,6 +554,14 @@
   publisher = {Princeton University Press},
   title     = {A value for n-person games},
   year      = {1953}
+}
+@article{Sharpe1994,
+  author  = {William Sharpe},
+  journal = {The Journal of Portfolio Management},
+  title   = {The Sharpe Ratio},
+  volume  = {Fall},
+  url     = {https://web.stanford.edu/~wfsharpe/art/sr/sr.htm},
+  year    = {1994}
 }
 @article{Shen2020,
   abstract  = {In the era of big data, deep learning for predicting stock market prices and trends has become even more popular than before. We collected 2 years of data from Chinese stock market and proposed a comprehensive customization of feature engineering and deep learning-based model for predicting price trend of stock markets. The proposed solution is comprehensive as it includes pre-processing of the stock market dataset, utilization of multiple feature engineering techniques, combined with a customized deep learning based system for stock market price trend prediction. We conducted comprehensive evaluations on frequently used machine learning models and conclude that our proposed solution outperforms due to the comprehensive feature engineering that we built. The system achieves overall high accuracy for stock market trend prediction. With the detailed design and evaluation of prediction term lengths, feature engineering, and data pre-processing methods, this work contributes to the stock analysis research community both in the financial and technical domains.},
