Add macroeconomic indicators

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -160,3 +160,29 @@
 \newacronym{a3c}{A3C}{Asynchronous Advantage Actor-Critic}
 \newacronym{trpo}{TRPO}{Trust Region Policy Optimisation}
 \newacronym{dpg}{DPG}{Deterministic Policy Gradient}
+\newacronym{sma}{SMA}{Simple Moving Average}
+\newacronym{ema}{EMA}{Exponential Moving Average}
+\newacronym{macd}{MACD}{Moving Average Convergence Divergence}
+\newacronym{rsi}{RSI}{Relative Strength Index}
+\newacronym{cci}{CCI}{Commodity Channel Index}
+\newacronym{atr}{ATR}{Average True Range}
+\newacronym{adx}{ADX}{Average Directional Index}
+\newacronym{dx}{DX}{Directional Movement Index}
+\newacronym{pdi}{PDI}{Positive Directional Index}
+\newacronym{mdi}{MDI}{Negative Directional Index}
+\newacronym{roc}{ROC}{Rate of Change}
+\newacronym{vix}{VIX}{Volatility Index}
+\newacronym{vftse}{VFTSE}{Volatility FTSE}
+\newacronym{vstoxx}{VSTOXX}{Volatility Euro Stoxx}
+\newacronym{vxd}{VXD}{Volatility DW30}
+\newacronym{ftse100}{FTSE 100}{Financial Times Stock Exchange 100 Index}
+\newacronym{sp500}{S\&P 500}{Standard and Poor's 500 Index}
+\newacronym{dw30}{DW30}{Dow Jones 30 Index}
+\newacronym{eurostoxx50}{Euro Stoxx 50}{Euro Stoxx 50 Index}
+\newacronym{us}{US}{United States}
+\newacronym{dxy}{DXY}{\acrshort{us} Dollar Index}
+\newacronym{exy}{EXY}{Euro Index}
+\newacronym{bxy}{BXY}{British Pound Currency Index}
+\newacronym{irx}{IRX}{3-Month Treasury Yield}
+\newacronym{fvx}{FVX}{5-Year Treasury Yield}
+\newacronym{tnx}{TNX}{10-Year Treasury Yield}
