--- a/report/appendix/state_representation.tex
+++ b/report/appendix/state_representation.tex
@@ -5,23 +5,23 @@
 The following technical indicators are used to represent the state of the financial environment. They are calculated based on the historical price data of the assets in the portfolio:
 
 \begin{itemize}
-    \item Simple Moving Average (SMA): Lagging indicator that smooths the price over a period of time. It is the unweighted mean of the previous $k$ data points and is computed following:
+    \item \acrfull{sma}: Lagging indicator that smooths the price over a period of time. It is the unweighted mean of the previous $k$ data points and is computed following:
     \begin{equation}
         \text{SMA}_t^k = \frac{1}{k} \sum_{i=t-k+1}^{t} p_{i}
     \end{equation}
     where $t$ is the current time step, $k$ is the look-back period and $p_i$ is the close price at time $i$.
-    In this thesis, the SMA is calculated for 5, 10 and 20 days. 
-    \item Exponential Moving Average (EMA): Weighted moving average that gives more importance to recent prices with the goal of making it more responsive to new information. It is calculated using the formula:
+    In this thesis, the \acrshort{sma} is calculated for 5, 10 and 20 days. 
+    \item \acrfull{ema}: Weighted moving average that gives more importance to recent prices with the goal of making it more responsive to new information. It is calculated using the formula:
     \begin{equation}
         \text{EMA}_t^k = \begin{cases} p_t & \text{if } t = 0 \\ \frac{2}{k+1} p_t + \left(1 - \frac{2}{k+1}\right) \text{EMA}_{t-1}^{k} & \text{if } t > 0 \end{cases}
     \end{equation}
-    where $k$ is the look-back period, $p_t$ is the close price at time $t$ and $\frac{2}{k+1}$ is the smoothing factor. In this thesis, the EMA is calculated for 5 and 10 days.
-    \item Moving Average Convergence Divergence (MACD): Momentum indicator that shows the relationship between two moving average of an asset's price. The formula is:
+    where $k$ is the look-back period, $p_t$ is the close price at time $t$ and $\frac{2}{k+1}$ is the smoothing factor. In this thesis, the \acrshort{ema} is calculated for 5 and 10 days.
+    \item \acrfull{macd}: Momentum indicator that shows the relationship between two moving average of an asset's price. The formula is:
     \begin{equation}
         \text{MACD}_t = \text{EMA}_t^{k_1} - \text{EMA}_t^{k_2}
     \end{equation}
     where $k_1$ and $k_2$ are the look-back periods for the short-term (12 periods) and long-term (26 periods) EMAs, respectively, and $p_t$ is the close price at time $t$.
-    \item Relative Strength Index (RSI): Momentum indicator that measures the magnitude of recent changes to identify overbought or oversold conditions in the market. It is computed using smoothed moving averages for the upward change in closing price $p_t$, defined as $u_t = \max {p_t - p_{t-1}, 0}$: 
+    \item \acrfull{rsi}: Momentum indicator that measures the magnitude of recent changes to identify overbought or oversold conditions in the market. It is computed using smoothed moving averages for the upward change in closing price $p_t$, defined as $u_t = \max {p_t - p_{t-1}, 0}$: 
     \begin{equation}
         \text{SMMA}_t^k (u_t) = \frac{1}{k}p_t + \left(1 - \frac{1}{k}\right)\text{EMA}_{t-1}^k (u_{t-1})
     \end{equation}
@@ -29,7 +29,7 @@ The following technical indicators are used to represent the state of the financ
     \begin{equation}
         \text{SMMA}_t^k (d_t) = \frac{1}{k}p_t + \left(1 - \frac{1}{k}\right)\text{EMA}_{t-1}^k (d_{t-1})
     \end{equation}
-    Then, the Relative Strength Index is given by:
+    Then, the \acrfull{rsi} is given by:
     \begin{equation}
         \text{RSI}_t = 100 - \frac{100}{1 + \text{RS}_t}
     \end{equation}
@@ -37,7 +37,7 @@ The following technical indicators are used to represent the state of the financ
     \begin{equation}
         \text{RS}_t = \frac{\text{SMMA}_t^k (u_t)}{\text{SMMA}_t^k (d_t)}
     \end{equation}
-    \item Commodity Channel Index (CCI): Momentum indicator that measures the deviation of the price from its historical average price over a period of time. It is calculated as:
+    \item \acrfull{cci}: Momentum indicator that measures the deviation of the price from its historical average price over a period of time. It is calculated as:
     \begin{equation}
         \text{CCI}_t^k = \frac{\text{TP}_t^k - \text{MA}_t^k}{0.015 \cdot \text{MD}_t}
     \end{equation}
@@ -61,7 +61,7 @@ The following technical indicators are used to represent the state of the financ
     \begin{equation}
         \text{BOLLDB}_t^k = \text{MA}_t^k - m \cdot \text{SD}_t^k
     \end{equation}
-    \item Average True Range (ATR): Volatility indicator that measures the average range of price movement over a period of time, usually 14 days. It is calculated as:
+    \item \acrfull{atr}: Volatility indicator that measures the average range of price movement over a period of time, usually 14 days. It is calculated as:
     \begin{equation}
         \text{ATR}_t^k = \frac{1}{k} \sum_{i=t-k+1}^{t} \text{TR}_i
     \end{equation}
@@ -75,15 +75,15 @@ The following technical indicators are used to represent the state of the financ
         \item Absolute value of the most recent period high minus the previous close.
         \item Absolute value of the most recent period low minus the previous close.
     \end{itemize}
-    \item Average Directional Index (ADX): Trend indicator used to measure the strength of a trend by quantifying the price movement. It is calculated as:
+    \item \acrfull{adx}: Trend indicator used to measure the strength of a trend by quantifying the price movement. It is calculated as:
     \begin{equation}
         \text{ADX}_t^k = \frac{1}{k} \sum_{i=t-k+1}^{t} \text{DX}_i
     \end{equation}
-    where the Directional Movement Index (DX) is defined as:
+    where the \acrfull{dx} is defined as:
     \begin{equation}
         \text{DX}_t = \frac{100 \cdot \left| \text{PDI}_t - \text{MDI}_t \right|}{\text{PDI}_t + \text{MDI}_t}
     \end{equation}
-    with the Positive Directional Index (PDI) and Negative Directional Index (MDI) calculated as:
+    with the \acrfull{pdi} and \acrfull{mdi} calculated as:
     \begin{equation}
         \text{PDI}_t = \frac{100 \cdot \text{SMMA}_t^k ( \text{DM}^+ )}{\text{ATR}_t^k}
     \end{equation}
@@ -98,13 +98,34 @@ The following technical indicators are used to represent the state of the financ
         \text{DM}^- = \max \left( 0, l_{t-1} - l_t \right)
     \end{equation}
     where $h_t$ and $l_t$ are the high and low prices of the asset at time $t$, respectively. 
-    \item Rate of Change (ROC): Momentum indicator that measures the percentage change in price between the current price $p_t$ and the price $p_{t-k}$ periods ago. It is given by the formula:
+    \item \acrfull{roc}: Momentum indicator that measures the percentage change in price between the current price $p_t$ and the price $p_{t-k}$ periods ago. It is given by the formula:
     \begin{equation}
         \text{ROC}_t^k = \frac{p_t - p_{t-k}}{p_{t-k}} \cdot 100
     \end{equation}
-    In this thesis, the ROC is calculated for $k=10$ days.
+    In this thesis, the \acrshort{roc} is calculated for $k=10$ days.
 \end{itemize}
 
 \section{Macroeconomic Indicators} \label{sec:macroeconomic-indicators}
 
 The following macroeconomic indicators are used to represent the state of the financial environment. They provide additional context about the market conditions and are calculated based on external data sources:
+\begin{itemize}
+    \item \acrfull{vix}: Measures the market's expectation of future volatility based on options prices.
+    \begin{itemize}
+        \item \acrshort{vix} is calculated using the implied volatility of \acrfull{sp500} options.
+        \item \acrshort{vftse} is calculated using the implied volatility of \acrfull{ftse100} options.
+        \item \acrshort{vstoxx} is calculated using the implied volatility of \acrlong{eurostoxx50} options.
+        \item \acrshort{vxd} is calculated using the implied volatility of \acrfull{dw30} options.
+    \end{itemize}
+    \item Currency index: Captures the impact from the monetary market on the stock market.
+    \begin{itemize}
+        \item \acrfull{dxy}: \acrfull{us} dollar's value relative to a basket of foreign currencies.
+        \item \acrfull{exy}: Euro's value relative to a basket of foreign currencies.
+        \item \acrfull{bxy}: British pound's value relative to a basket of foreign currencies.
+    \end{itemize}
+    \item Interest rates: Reflects the cost of borrowing money and the return on savings. This is only available for US markets.
+    \begin{itemize}
+        \item \acrfull{irx}: Reflects the return on investment for a 3-month government bond.
+        \item \acrfull{fvx}: Reflects the return on investment for a 5-year government bond.
+        \item \acrfull{tnx}: Reflects the return on investment for a 10-year government bond.
+    \end{itemize}
+\end{itemize}
