Add comments to function

--- a/examples/wandb.ipynb
+++ b/examples/wandb.ipynb
@@ -184,17 +184,22 @@
    "outputs": [],
    "source": [
     "def perform_model_sweep(model_name: str):\n",
+    "\n",
+    "    # Start sweep\n",
     "    sweep_id = wandb_opt.sweep(\n",
-    "        config.SWEEP_CONFIG, model_name=model_name, number_trials=20\n",
+    "        sweep_config=config.SWEEP_CONFIG,\n",
+    "        model_name=model_name,\n",
     "    )\n",
     "    sweep_ids[model_name] = sweep_id\n",
     "\n",
-    "    run_id, configuration = wandb_opt.get_best_sweep(\n",
+    "    # Retrieve best run\n",
+    "    run_id, configuration = wandb_opt.get_best_sweep_run(\n",
     "        sweep_id=sweep_id, model_name=model_name\n",
     "    )\n",
     "\n",
     "    best_runs[model_name] = (run_id, configuration)\n",
     "\n",
+    "    # Test the best hyperparameters on the test_set\n",
     "    df_account, df_actions = wandb_opt.test_best_run(\n",
     "        model_name=model_name,\n",
     "        configuration=configuration,\n",
@@ -209,6 +214,7 @@
     "        actions_data=df_actions,\n",
     "    )\n",
     "\n",
+    "    # Compute performance statistics\n",
     "    perf_stats_alg = benchmark.compute_perf_stats(df_account=df_account)\n",
     "    perf_stats[model_name] = perf_stats_alg"
    ]
