Add automatic wordcount

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -5,7 +5,7 @@
 \studentnumber{K24087939}
 \programme{Computational Finance M.Sc.}
 \supervisor{Riaz Ahmad}
-\wordcount{\red{Word count goes here}}
+\wordcount{\input{wordcount.tex}}
 \title{Explainable Deep Learning for Portfolio Optimisation}
 \author{Ingrid Pérez Aguilera}
 \ReleaseProject{1} 
